--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ header {
 .accordion__heading {
   display: flex;
   justify-content: space-between;
-  padding: 1rem 2rem;
+  padding: 0.8rem 2rem;
   border-top: 1px solid #ddd;
   letter-spacing: 1px;
 }
@@ -39,11 +39,16 @@ header {
   overflow: hidden;
   transition: 0.3s ease all;
   margin-left: 2rem;
+  margin-bottom: 1.5rem;
 }
 .accordion__details p {
   padding: 1.2rem 0;
   line-height: 1.2rem;
   font-size: 0.8rem;
+}
+.display {
+  max-height: 2rem;
+  overflow: initial;
 }
 
 
