--- a/My-Attempt/styles.css
+++ b/My-Attempt/styles.css
@@ -14,6 +14,9 @@ body {
   background: #e3c167;
   border-radius: 4px;
 }
+img {
+  border-radius: 4px;
+}
 .accordion__header {
   text-align: center;
   margin-bottom: 2rem;
@@ -56,4 +59,7 @@ footer {
 }
 footer a {
   text-decoration: none;
+}
+#bugs {
+  margin-bottom: 1rem;
 }
